Fix layout wrap issue

--- a/global.css
+++ b/global.css
@@ -54,9 +54,11 @@ body {
   margin: 0px;
 }
 
-html, body, #___gatsby {
-    height: 100%;
-    width: 100%;
+html, body, #___gatsby, #gatsby-focus-wrapper {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
 div[role="group"][tabindex] {
